# external_freetype

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/freetype_2411_cmake/: CMakeLists.txt
resources/freetype_262_cmake/: CMakeLists.txt
resources/freetype_cmake/: CMakeLists.txt
test/: CMakeLists.txt  freetype_test.cpp
